--- a/src/atomize.css
+++ b/src/atomize.css
@@ -1,4 +1,10 @@
+@import url('x3dom/x3dom.css');
+
 .spacetools {line-height:0px;bottom:0px;right:0px;margin:0;padding:0;position:absolute;display:inline;z-index:100;}
 .spacetools li{line-height:0px;list-style-type:none;display:inline;padding:0;margin:0 0px 0 0;float:left;}
 .spacetools li button{border:1px solid #666;background-color:#202021;color:#ccc;padding:0px;margin:0;display:inline;margin-top:0px;}
 .spacetools li:first-child button{margin-left:0px;}
+
+X3D, x3d {
+  border: none;
+}
